grammar.js
    manifest: $ => seq(
      // Allow EPP lamda like parameter lists at the beginning of a file
      optional(alias($._lambda_parameter_list, $.parameter_list)),
      optional($._statements),
    ),

    // Collects sequence of elements into a list that the _statements rule can
    // transform (Needed because language supports function calls without
    // parentheses around arguments).

    _statements: $ => choice(
      $.statement,
      seq($._statements, optional(';'), $.statement),
    ),

    statement: $ => choice(
      $._assignment,
      $.statement_function,
      seq($.statement, ',', $._assignment),
    ),

    _assignment: $ => prec.right(choice(
      prec(PREC.LOW, $._relationship),
      prec.right(PREC.EQUALS, seq(
        field("lhs", $._relationship),
        field('operator', choice('=', '+=', '-=')),
        field("rhs", $._assignment),
      )),
    )),

    _expression: $ => choice(
      seq('(', $._assignment, ')'),
      $._primary_expression,
      $._bracketed_expression,
      $.function_call,
      $.unary,
      $.binary,
      prec.left(PREC.QMARK, seq(field('lhs', $._expression), $.selector)),
    ),

    access_element: $ => choice(
      $._expression,
      $.hashpair,
    ),

    // Expressions

    _lambda_parameter_list: $ => seq(
      '|',
      optional(seq($._parameters, optional(','))),
      '|',
    ),

    // Conditionals

    // If

    parameter_list: $ => choice(
      seq('(', ')'),
      seq('(', $._parameters, optional(','), ')'),
    ),

    _parameters: $ => choice(
      $.parameter,
      seq($._parameters, ',', $.parameter),
    ),

    parameter: $ => choice($._untyped_parameter, $.typed_parameter),

    _untyped_parameter: $ => choice($.regular_parameter, $.splat_parameter),

    regular_parameter: $ => choice(
      seq($.variable, field('operator', '='), $._expression),
      $.variable,
    ),

    typed_parameter: $ => seq($._parameter_type, $._untyped_parameter),

    _parameter_type: $ => choice(
      $.type,
      seq(
        $.type,
        token.immediate('['),
        alias($._access_elements, $.access),
        ']',
      ),
    ),

    // Type Alias

    variable: $ => choice(
      seq('$', alias($._variable_name, $.name)),
      seq($._interpolation_nosigil_variable, alias($._variable_name, $.name)),
    ),

    _variable_name: _ => token.immediate(/(::)?(\w+::)*\w+/),

    // Reserved words

    type:     _ => /((::)?[A-Z]\w*)+/,
    name:     _ => /((::)?[a-z]\w*)(::[a-z]\w*)*/,
    number:   _ => /(?:0[xX][0-9A-Fa-f]+|0?\d+(?:\.\d+)?(?:[eE]-?\d+)?)/,
